[project]
name = "psrc-census-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "branca>=0.8.2",
    "folium>=0.20.0",
    "geopandas>=1.1.2",
    "iteround>=1.0.4",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "requests>=2.32.5",
]
